--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -82,20 +82,19 @@
             <div class="trips-grid" id="activeTrips">
                 <div class="trip-card" onclick="openTrip()">
                     <div class="trip-thumbnail">
-                        🏖️
-                        <span class="trip-status active">● 진행 중</span>
+                        <span class="trip-status active"></span>
                     </div>
                     <div class="trip-content">
-                        <h3 class="trip-title">서울-부산 2박 3일 미식 여행</h3>
-                        <p class="trip-dates">2024.12.15 - 2024.12.17</p>
+                        <h3 class="trip-title"></h3>
+                        <p class="trip-dates"></p>
                         <div class="trip-meta">
-                            <span>💰 ₩523,000 / ₩800,000</span>
-                            <span>📍 5개 장소</span>
+                            <span></span>
+                            <span></span>
                         </div>
                         <div class="trip-progress">
                             <div class="trip-progress-label">
-                                <span>진행도</span>
-                                <span>60%</span>
+                                <span></span>
+                                <span></span>
                             </div>
                             <div class="trip-progress-bar">
                                 <div
@@ -106,7 +105,7 @@
                         </div>
                         <div class="trip-actions">
                             <button class="trip-action-btn">✏️ 편집</button>
-                            <button class="trip-action-btn">👥 공유</button>
+                            <!-- <button class="trip-action-btn">👥 공유</button> -->
                         </div>
                     </div>
                 </div>
@@ -114,19 +113,19 @@
                 <div class="trip-card">
                     <div class="trip-thumbnail">
                         🏔️
-                        <span class="trip-status active">● 진행 중</span>
+                        <span class="trip-status active"></span>
                     </div>
                     <div class="trip-content">
-                        <h3 class="trip-title">강원도 겨울 여행</h3>
-                        <p class="trip-dates">2024.12.20 - 2024.12.22</p>
+                        <h3 class="trip-title"></h3>
+                        <p class="trip-dates"></p>
                         <div class="trip-meta">
-                            <span>💰 ₩350,000 / ₩600,000</span>
-                            <span>📍 8개 장소</span>
+                            <span></span>
+                            <span></span>
                         </div>
                         <div class="trip-progress">
                             <div class="trip-progress-label">
-                                <span>진행도</span>
-                                <span>25%</span>
+                                <span></span>
+                                <span></span>
                             </div>
                             <div class="trip-progress-bar">
                                 <div
@@ -137,7 +136,7 @@
                         </div>
                         <div class="trip-actions">
                             <button class="trip-action-btn">✏️ 편집</button>
-                            <button class="trip-action-btn">👥 공유</button>
+                            <!-- <button class="trip-action-btn">👥 공유</button> -->
                         </div>
                     </div>
                 </div>
