여행 히스토리 렌더링

--- a/public/profile.html
+++ b/public/profile.html
@@ -157,53 +157,7 @@
             <div class="tab-content" id="historyTab" style="display: none">
                 <div class="settings-card">
                     <h2 class="card-title">📅 최근 여행</h2>
-                    <div class="trip-history">
-                        <div class="trip-history-item">
-                            <div class="trip-history-icon">🏖️</div>
-                            <div class="trip-history-info">
-                                <div class="trip-history-title">
-                                    서울-부산 2박 3일 미식 여행
-                                </div>
-                                <div class="trip-history-date">
-                                    2024.12.15 - 2024.12.17
-                                </div>
-                            </div>
-                            <div class="trip-history-stats">
-                                <span>💰 ₩523,000</span>
-                                <span>📍 5개 장소</span>
-                            </div>
-                        </div>
-                        <div class="trip-history-item">
-                            <div class="trip-history-icon">🏔️</div>
-                            <div class="trip-history-info">
-                                <div class="trip-history-title">
-                                    강원도 겨울 여행
-                                </div>
-                                <div class="trip-history-date">
-                                    2024.12.20 - 2024.12.22
-                                </div>
-                            </div>
-                            <div class="trip-history-stats">
-                                <span>💰 ₩350,000</span>
-                                <span>📍 8개 장소</span>
-                            </div>
-                        </div>
-                        <div class="trip-history-item">
-                            <div class="trip-history-icon">🌸</div>
-                            <div class="trip-history-info">
-                                <div class="trip-history-title">
-                                    경주 벚꽃 여행
-                                </div>
-                                <div class="trip-history-date">
-                                    2024.04.05 - 2024.04.07
-                                </div>
-                            </div>
-                            <div class="trip-history-stats">
-                                <span>💰 ₩280,000</span>
-                                <span>📍 6개 장소</span>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="trip-history" id="tripHistoryContainer"></div>
                 </div>
             </div>
         </div>
