feat: 예산/일정 기능 클라이언트 구현
- Main.mjs: 예산/일정 관리 함수 추가
  - loadMyExpenses(), addExpense()
  - loadMySchedules(), saveSchedule(), updateSchedule(), deleteSchedule()
  - loadTripData(): 여행 정보 불러오기
  - updateBudgetSummary(): 여행 데이터에서 개인 예산 가져오기
- main.html: 예시 데이터 제거
- budget-schedule-addon.mjs: 예산/일정 코드 별도 파일
- MongoDB 연동 완성

--- a/public/main.html
+++ b/public/main.html
@@ -199,30 +199,8 @@
               <div class="section-title">📅 내 일정 목록</div>
 
               <!-- ✅ Main.mjs: schedule-list -->
+              <!-- 일정 목록은 Main.mjs의 loadMySchedules()에서 동적으로 추가됩니다 -->
               <div class="schedule-list" id="schedule-list">
-                <div class="schedule-item">
-                  <div class="schedule-info">
-                    <div class="schedule-time">⏰ 10:00 AM</div>
-                    <div class="schedule-title">광안리 해변 산책</div>
-                    <div class="schedule-location">📍 부산 광안리</div>
-                  </div>
-                  <div class="schedule-actions">
-                    <button class="btn-icon" title="수정">✏️</button>
-                    <button class="btn-icon" title="삭제">🗑️</button>
-                  </div>
-                </div>
-
-                <div class="schedule-item">
-                  <div class="schedule-info">
-                    <div class="schedule-time">⏰ 12:30 PM</div>
-                    <div class="schedule-title">자갈치 시장 점심</div>
-                    <div class="schedule-location">📍 자갈치 시장</div>
-                  </div>
-                  <div class="schedule-actions">
-                    <button class="btn-icon" title="수정">✏️</button>
-                    <button class="btn-icon" title="삭제">🗑️</button>
-                  </div>
-                </div>
               </div>
             </div>
 
@@ -439,29 +417,7 @@
 
             <div class="section-title">최근 지출 내역</div>
 
-            <div class="expense-item">
-              <div class="expense-info">
-                <div class="expense-name">KTX 왕복 티켓</div>
-                <div class="expense-category">#교통비</div>
-              </div>
-              <div class="expense-amount">₩120,000</div>
-            </div>
-
-            <div class="expense-item">
-              <div class="expense-info">
-                <div class="expense-name">호텔 2박</div>
-                <div class="expense-category">#숙박비</div>
-              </div>
-              <div class="expense-amount">₩280,000</div>
-            </div>
-
-            <div class="expense-item">
-              <div class="expense-info">
-                <div class="expense-name">자갈치 시장 회</div>
-                <div class="expense-category">#식비</div>
-              </div>
-              <div class="expense-amount">₩89,000</div>
-            </div>
+            <!-- 지출 목록은 Main.mjs의 loadMyExpenses()에서 동적으로 추가됩니다 -->
 
             <!-- 지출 추가 폼 -->
             <div
