여행 템플릿 이모지/배경 색상 변경 팔레트 추가

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -51,10 +51,7 @@
 
             <!-- 액션 버튼 -->
             <div class="action-buttons">
-                <button
-                    class="btn btn-primary"
-                    onclick="location.href='./main.html'"
-                >
+                <button class="btn btn-primary createNewTripBtn">
                     ✨ 새 여행 만들기
                 </button>
             </div>
