--- a/public/main.html
+++ b/public/main.html
@@ -6,7 +6,7 @@
     <title>TripCanvas - AI 기반 여행 플래너</title>
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=b1c2a432c49b42d7baf0774cc6cb8380&autoload=false&libraries=services"
+      src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=b1c2a432c49b42d7baf0774cc6cb8380&autoload=false&libraries=services"
     ></script>
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
