--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -51,7 +51,10 @@
 
             <!-- 액션 버튼 -->
             <div class="action-buttons">
-                <button class="btn btn-primary createNewTripBtn">
+                <button
+                    class="btn btn-primary"
+                    onclick="location.href='main.html'"
+                >
                     ✨ 새 여행 만들기
                 </button>
             </div>
